--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -1,4 +1,9 @@
 @font-face {
-    font-family: '';
-    src: url('') format('');
+    font-family: 'Exuid';
+    src: url('../fonts/Euclid Bold.woff2') format('woff2');
+}
+
+@font-face {
+    font-family: 'Exuid';
+    src: url('../fonts/Euclid Light.woff2') format('woff2');
 }
