--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -22,13 +22,15 @@
     }
 }
 
-// Body Locked
+html,
 body {
+    background: $text-white-color;
     font-family: $fontMain;
-
+    height: 100vh;
 
     &.locked {
         overflow: hidden;
+        background: $bg-alpha;
     }
 }
 
