fix z-index dropdown navbar/ end hero section

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -7,6 +7,7 @@
 // Sections or Pages SCSS-files imports
 @import 'components/header';
 @import 'components/footer';
+@import 'components/hero';
 
 // Libs
 // @import './libs/swiper';
