--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -1,4 +1,5 @@
-// Container
+@import 'mixins';
+
 .container {
     max-width: ($containerWidth + $containerPadding) + px;
     width: 100%;
@@ -33,8 +34,83 @@ body {
     }
 }
 
-// Animations
-// Fade
+.--bg-primary {
+    background: $bg-primary;
+}
+
+.--section-title {
+    color: $text-primary-color;
+    font-size: 50px;
+    font-weight: 400;
+    line-height: 50px;
+
+    @include pre-mobile{
+        font-size: 30px;
+    }
+}
+
+.--text-subtitle {
+    color: $text-gray-color;
+    font-size: 18px;
+    font-weight: 300;
+    line-height: 150%;
+
+    @include pre-mobile{
+        font-size: 15px;
+    }
+}
+
+.--section-info-link {
+    color: $text-primary-color;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 30px;
+
+    @include pre-mobile{
+        font-size: 15px;
+    }
+}
+
+.--arrow-btn {
+    width: 55px;
+    height: 55px;
+    background: $bg-dodger;
+    background-size: cover;
+    border-radius: 50%;
+    position: relative;
+
+    @include pre-mobile{
+        width: 45px;
+        height: 45px;
+    }
+
+    &::after {
+        @include pseudo() {
+            background: url('../img/arrow-right.svg') no-repeat center;
+            width: 12px;
+            height: 35px;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
+
+        transition: $transition-all;
+    }
+
+    &:hover {
+        &::after {
+            left: 60%;
+        }
+    }
+}
+
+.--text {
+    color: $text-primary-color;
+    font-size: 25px;
+    font-weight: 400;
+    line-height: 130%;
+}
+
 @keyframes fade {
     0% {
         opacity: 0;
