--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -5,7 +5,7 @@
 }
 
 @mixin desktop {
-    @media (max-width: (1100px)) {
+    @media (max-width: (1450px)) {
         @content;
     }
 }
@@ -18,6 +18,13 @@
 
 @mixin small-tablet {
     @media (max-width: (768px)) {
+        @content;
+    }
+}
+
+
+@mixin pre-mobile {
+    @media (max-width: (650px)) {
         @content;
     }
 }
