--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -22,6 +22,7 @@ $fontSecondary: 'Ecuid', sans-serif;
 $text-white-color: #fff;
 $text-black-color: #000;
 $text-primary-color: #292d32;
+$text-gray-color: #838383;
 
 // background
 $bg-primary: #f2f2f2;
@@ -29,6 +30,7 @@ $bg-secondary: #f9f9f9;
 $bg-picton: #48a4eb;
 $bg-dodger: #33a9ff;
 $bg-alpha: rgba(63, 63, 63, 0.5);
+$bg-bullet: #d0d0d0;
 
 // border
 $border-primary: 1px solid $bg-primary;
