--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -1,9 +1,5 @@
 @import '../mixins';
 
-.wrapper {
-    position: relative;
-}
-
 .header {
     padding: 27px 0;
     background: $text-white-color;
@@ -82,6 +78,8 @@
         display: flex;
         align-items: center;
         perspective: 2000px;
+        position: relative;
+        z-index: $active-section;
 
         @include desktop {
             width: auto;
@@ -91,6 +89,11 @@
         &-menu {
             display: flex;
             align-items: center;
+
+            &-wrapper {
+                position: relative;
+                perspective: 2000;
+            }
         }
 
         &-item {
@@ -206,6 +209,11 @@
             flex-direction: column;
             gap: 45px;
             pointer-events: all;
+            z-index: $burger-z-index;
+
+            @include mobile {
+                top: calc($header-height);
+            }
         }
     }
 
@@ -283,6 +291,7 @@
     left: 50%;
     transform: translateX(-50%);
     width: 405px;
+    z-index: $active-section;
 
     &-heading {
         display: flex;
@@ -380,6 +389,11 @@
     transform: rotateX(-15deg);
     transition: $transition-all;
     display: inline-block;
+    z-index: 10000;
+
+    @include tablet {
+        display: none;
+    }
 }
 
 .popover.open {
@@ -398,7 +412,6 @@
 
 .content {
     position: absolute;
-    z-index: $active-section;
     top: -13px;
     left: -63%;
     transition: $transition-all;
@@ -415,7 +428,6 @@
 
 .section.active {
     opacity: 1;
-    z-index: $active-section;
     visibility: visible;
 }
 
