--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -8,6 +8,7 @@
 @import 'components/header';
 @import 'components/footer';
 @import 'components/hero';
+@import 'components/catalog';
 
 // Libs
 // @import './libs/swiper';
