--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -44,7 +44,11 @@ body {
     font-weight: 400;
     line-height: 50px;
 
-    @include pre-mobile{
+    @include desktop {
+        line-height: normal;
+    }
+
+    @include pre-mobile {
         font-size: 30px;
     }
 }
@@ -55,8 +59,9 @@ body {
     font-weight: 300;
     line-height: 150%;
 
-    @include pre-mobile{
+    @include pre-mobile {
         font-size: 15px;
+        line-height: 133.687%;
     }
 }
 
@@ -66,7 +71,7 @@ body {
     font-weight: 400;
     line-height: 30px;
 
-    @include pre-mobile{
+    @include pre-mobile {
         font-size: 15px;
     }
 }
@@ -79,7 +84,7 @@ body {
     border-radius: 50%;
     position: relative;
 
-    @include pre-mobile{
+    @include pre-mobile {
         width: 45px;
         height: 45px;
     }
@@ -109,6 +114,11 @@ body {
     font-size: 25px;
     font-weight: 400;
     line-height: 130%;
+
+    @include mobile {
+        font-size: 20px;
+        line-height: 150%;
+    }
 }
 
 @keyframes fade {
