--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -23,6 +23,9 @@ $text-white-color: #fff;
 $text-black-color: #000;
 $text-primary-color: #292d32;
 $text-gray-color: #838383;
+$text-outer-color: #343A41;
+$text-outer-color: #343A41;
+$text-nobel-color: #B7B7B7;
 
 // background
 $bg-primary: #f2f2f2;
