--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -9,6 +9,7 @@
 @import 'components/footer';
 @import 'components/hero';
 @import 'components/catalog';
+@import 'components/benefits';
 
 // Libs
 // @import './libs/swiper';
