--- a/src/scss/components/_benefits.scss
+++ b/src/scss/components/_benefits.scss
@@ -8,11 +8,52 @@
         margin-bottom: 120px;
     }
 
+    &-content {
+        position: relative;
+        z-index: 5;
+
+        &::after {
+            @include pseudo {
+                position: absolute;
+                background: url(../../img/benefits-bg.svg) no-repeat center;
+                background-size: cover;
+                max-width: 965px;
+                width: 100%;
+                height: 349px;
+                left: -265px;
+                top: 76px;
+                z-index: -1;
+
+                @include desktop {
+                    left: 0;
+                    top: 0;
+                }
+
+                @include tablet {
+                    top: -40px;
+                    left: 50%;
+                    transform: translateX(-50%);
+                }
+
+                @include mobile {
+                    max-width: 335px;
+                    height: 121px;
+                    top: 285px;
+                    left: 167px;
+                }
+            }
+        }
+    }
+
     &-heading {
         display: flex;
         align-items: center;
         gap: 18px;
         margin-bottom: 105px;
+
+        @include desktop {
+            gap: 0;
+        }
 
         @include tablet {
             flex-direction: column-reverse;
@@ -24,7 +65,7 @@
             justify-content: flex-start;
             align-items: flex-start;
             text-align: start;
-            margin-bottom: -34px;
+            margin-bottom: -16px;
             overflow: hidden;
         }
     }
@@ -57,7 +98,7 @@
         }
 
         @include mobile {
-            transform: translate(61px, -73px);
+            transform: translate(63px,-57px);
         }
     }
 
@@ -71,6 +112,11 @@
 
     &-description {
         margin-bottom: 41px;
+        max-width: 518px;
+
+        @include tablet {
+            max-width: 100%;
+        }
 
         @include mobile {
             max-width: 336px;
@@ -114,9 +160,9 @@
         flex: 0 1 330px;
         position: relative;
 
-        &::after{
-            @include pseudo{
-                background: url("../../img/benefits-item-decor.svg") no-repeat center;
+        &::after {
+            @include pseudo {
+                background: url('../../img/benefits-item-decor.svg') no-repeat center;
                 background-size: cover;
                 max-width: 140px;
                 width: 100%;
@@ -125,7 +171,7 @@
                 right: 0;
                 z-index: 1;
 
-                @include mobile{
+                @include mobile {
                     max-width: 121px;
                     height: 80px;
                     top: -10px;
@@ -236,7 +282,6 @@
             font-family: Exuid;
             font-size: 16px;
             font-weight: 300;
-            font-style: normal;
             line-height: normal;
         }
     }
