--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -123,6 +123,7 @@
     }
 
     &-title {
+        display: block;
         line-height: normal;
         margin-bottom: 60px;
         max-width: 395px;
