--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -10,6 +10,7 @@
 @import 'components/hero';
 @import 'components/catalog';
 @import 'components/benefits';
+@import 'components/news';
 
 // Libs
 // @import './libs/swiper';
