--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -37,6 +37,9 @@ body {
 .--bg-primary {
     background: $bg-primary;
 }
+.--bg-secondary {
+    background: $bg-secondary;
+}
 
 .--section-title {
     color: $text-primary-color;
