--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -11,6 +11,7 @@
 @import 'components/catalog';
 @import 'components/benefits';
 @import 'components/news';
+@import 'components/request';
 
 // Libs
 // @import './libs/swiper';
