--- a/src/scss/components/_request.scss
+++ b/src/scss/components/_request.scss
@@ -1,6 +1,43 @@
 @import '../mixins';
 
 .request {
+    position: relative;
+    z-index: 1;
+
+    &::after {
+        @include pseudo {
+            background:
+                linear-gradient(0deg, #eee 0%, #eee 100%),
+                linear-gradient(0deg, rgba(0, 0, 0, 0.42) 0%, rgba(0, 0, 0, 0.42) 100%),
+                lightgray 0px -382.687px / 100% 205.208% no-repeat;
+            bottom: -177px;
+            right: 0;
+            left: 0;
+            height: 676px;
+            z-index: -1;
+        }
+
+        @include tablet {
+            display: none;
+        }
+    }
+
+    &::before {
+        @include pseudo {
+            background: url('../../img/request-bg.png') no-repeat center;
+            background-size: cover;
+            max-width: 1635px;
+            width: 100%;
+            height: 459px;
+            bottom: -153px;
+            left: 7px;
+        }
+
+        @include tablet {
+            display: none;
+        }
+    }
+
     &-content {
         display: flex;
         align-items: flex-start;
@@ -27,10 +64,18 @@
                 }
 
                 @include tablet {
-                    right: -20px;
                     left: auto;
                     top: 268px;
                     transform: rotate(5deg) scale(0.7);
+                    right: -35px;
+                }
+
+                @include mobile {
+                    width: 108.925px;
+                    height: 235.047px;
+                    transform: rotate(12.189deg) scale(1);
+                    top: 422px;
+                    right: 44px;
                 }
             }
         }
@@ -54,10 +99,18 @@
             padding: 101px 0 60px 30px;
         }
 
+        @include mobile {
+            padding: 103px 0 60px 15px;
+        }
+
         &-title {
             display: block;
             margin-bottom: 18px;
             line-height: 50px;
+
+            @include mobile {
+                margin-bottom: 26px;
+            }
         }
 
         &-subtitle {
@@ -65,6 +118,11 @@
             font-weight: 400;
             line-height: 150%;
             margin-bottom: 48px;
+
+            @include mobile {
+                max-width: 250px;
+                margin-bottom: 41px;
+            }
         }
 
         &-list {
@@ -72,6 +130,10 @@
             flex-direction: column;
             align-items: flex-start;
             margin-bottom: 60px;
+
+            @include mobile {
+                margin-bottom: 24px;
+            }
         }
 
         &-item {
@@ -79,17 +141,39 @@
             align-items: flex-start;
             gap: 17px;
 
+            @include mobile {
+                gap: 8px;
+            }
+
             &:nth-child(1) {
                 margin-bottom: 44px;
+
+                @include mobile {
+                    margin-bottom: 25px;
+                }
             }
 
             &:nth-child(2) {
                 margin-bottom: 72px;
+
+                @include mobile {
+                    margin-bottom: 24px;
+                }
             }
 
             &-icon {
                 width: 38px;
                 height: 38px;
+
+                @include mobile {
+                    width: 22px;
+                    height: 22px;
+
+                    svg {
+                        width: 18px;
+                        height: 18px;
+                    }
+                }
             }
 
             &-text {
@@ -104,6 +188,11 @@
                     line-height: 133.687%;
                     margin-bottom: 8px;
                     margin-top: 5px;
+
+                    @include mobile {
+                        font-size: 15px;
+                        margin-bottom: 0;
+                    }
                 }
 
                 > * {
@@ -112,6 +201,10 @@
                     font-weight: 400;
                     line-height: 150%;
                     font-style: normal;
+
+                    @include mobile {
+                        font-size: 18px;
+                    }
                 }
             }
         }
@@ -120,6 +213,19 @@
             display: flex;
             align-items: center;
             gap: 18px;
+
+            @include mobile {
+                gap: 12px;
+            }
+
+            li {
+                svg {
+                    @include mobile {
+                        width: 26px;
+                        height: 26px;
+                    }
+                }
+            }
         }
     }
 
@@ -146,10 +252,19 @@
             padding: 60px 30px;
         }
 
+        @include mobile {
+            align-items: flex-start;
+            padding: 60px 14px;
+        }
+
         &-title {
             @extend .request-left-title;
 
             color: $text-white-color;
+
+            @include mobile {
+                margin-bottom: 18px;
+            }
         }
 
         &-subtitle {
@@ -157,6 +272,11 @@
 
             color: $text-white-color;
             margin-bottom: 65px;
+
+            @include mobile {
+                max-width: 100%;
+                white-space: nowrap;
+            }
         }
 
         &-form {
@@ -201,6 +321,7 @@
                     font-weight: 500;
                     line-height: 133.687%;
                     transition: 0.1s all ease-in-out;
+                    z-index: 2;
 
                     &:hover,
                     :focus {
@@ -211,6 +332,7 @@
                 textarea {
                     resize: none;
                     height: 145px;
+                    padding-top: 10px;
                 }
             }
 
@@ -226,6 +348,11 @@
                     color: $text-white-color;
                     font-size: 16px;
                     line-height: 30px;
+                    transition: $transition-all;
+
+                    &:hover {
+                        color: $bg-dodger;
+                    }
                 }
             }
         }
