--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -1,4 +1,262 @@
-// Footer
-footer {
-  display: block;
+@import '../mixins';
+
+.footer {
+    margin-top: 237px;
+    overflow: hidden;
+
+    @include tablet {
+        margin-top: 30px;
+    }
+
+    @include mobile {
+        background: $bg-primary;
+    }
+
+    &-top {
+        display: flex;
+        align-items: center;
+        gap: 180px;
+        padding-bottom: 60px;
+        border-bottom: $border-mercury;
+        position: relative;
+
+        @include desktop {
+            gap: 20px;
+        }
+
+        @include tablet {
+            flex-direction: column;
+            gap: 28px;
+        }
+
+        @include mobile {
+            padding-bottom: 30px;
+        }
+
+        &::after {
+            @include pseudo {
+                background: url('../../img/footer-bg.svg') no-repeat center;
+                background-size: cover;
+                max-width: 515px;
+                width: 100%;
+                height: 140px;
+                right: -285px;
+                bottom: 12px;
+
+                @include desktop {
+                    right: 0;
+                    bottom: 0;
+                }
+
+                @include mobile {
+                    display: none;
+                }
+            }
+        }
+    }
+
+    &-logo {
+        max-width: 112px;
+        width: 100%;
+        height: 112px;
+        margin-right: 10px;
+
+        @include mobile {
+            max-width: 70px;
+            height: 70px;
+        }
+
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            border-radius: 50%;
+        }
+    }
+
+    &-list {
+        display: flex;
+        align-items: flex-start;
+        gap: 183px;
+
+        @include desktop {
+            width: 100%;
+            gap: 15px;
+            justify-content: space-between;
+        }
+
+        @include tablet {
+            flex-wrap: wrap;
+            gap: 40px;
+        }
+
+        @include small-tablet {
+            flex-direction: row-reverse;
+            justify-content: flex-end;
+        }
+
+        @include mobile {
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            gap: 30px 19px;
+        }
+    }
+
+    &-item {
+        &:nth-child(1) {
+            @include mobile {
+                grid-column: 1;
+                grid-row: 2;
+            }
+        }
+
+        &:nth-child(2) {
+            @include mobile {
+                grid-column: 2;
+                grid-row: 1;
+            }
+        }
+
+        &-title {
+            color: $text-primary-color;
+            font-size: 25px;
+            font-weight: 400;
+            line-height: normal;
+            margin-bottom: 15px;
+            display: block;
+
+            @include mobile {
+                font-size: 18px;
+                line-height: normal;
+            }
+        }
+
+        &-catalog {
+            &-list {
+                display: flex;
+                flex-direction: column;
+                gap: 10px;
+            }
+
+            &-item {
+                a {
+                    color: $text-primary-color;
+                    font-size: 16px;
+                    font-weight: 300;
+                    line-height: normal;
+                    transition: $transition-color;
+
+                    @include mobile {
+                        font-size: 15px;
+                    }
+
+                    &:hover {
+                        color: $bg-dodger;
+                    }
+                }
+            }
+        }
+    }
+
+    &-bottom {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        margin: 40px 0;
+
+        @include desktop {
+            gap: 35px;
+        }
+
+        @include mobile {
+            flex-direction: column;
+            margin-top: 33px;
+            position: relative;
+
+            &::after {
+                @include pseudo {
+                    background: url('../../img/footer-bg-mobile.svg') no-repeat center;
+                    background-size: cover;
+                    right: -36px;
+                    bottom: -7px;
+                    max-width: 292px;
+                    width: 100%;
+                    height: 75px;
+                    transform: scale(0.7);
+                }
+            }
+        }
+
+        &-list {
+            display: flex;
+            align-items: flex-start;
+            justify-content: space-between;
+            width: 100%;
+            margin-right: 153px;
+
+            @include desktop {
+                margin-right: 0;
+                gap: 20px;
+            }
+
+            @include tablet {
+                flex-wrap: wrap;
+                gap: 25px;
+            }
+        }
+
+        &-item {
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            gap: 17px;
+
+            @include desktop {
+                max-width: 320px;
+            }
+
+            @include mobile {
+                gap: 0;
+                white-space: nowrap;
+            }
+
+            address,
+            strong,
+            a {
+                color: $text-primary-color;
+                font-size: 18px;
+                font-weight: 400;
+                line-height: 150%;
+                transition: $transition-color;
+                font-style: normal;
+
+                @include mobile {
+                    font-size: 15px;
+                    line-height: 150%;
+                }
+
+                &:hover {
+                    color: $bg-dodger;
+                }
+            }
+
+            .phones {
+                display: flex;
+                align-items: center;
+
+                strong {
+                    margin-right: 5px;
+                }
+            }
+        }
+
+        &-social {
+            @extend .request-left-social-list;
+
+            @include mobile {
+                width: 100%;
+                gap: 36px !important;
+            }
+        }
+    }
 }
